# islam-debate

./: .gitignore  LICENSE  README.md  citation_analysis_results.json  pyproject.toml
islam_debate/: extract_citations.py  llm_clients.py  main.py  verify_translation.py
islam_debate/citations/: answered_or_not.csv  citation_analysis_results.json  combined_results.csv
islam_debate/data/: islam_encourages_violence_towards_women_20240911_064304.json  islam_encourages_violence_towards_women_20240911_064354.json  islam_encourages_violence_towards_women_20240911_064555.json  islam_encourages_violence_towards_women_20240911_064630.json  islam_encourages_violence_towards_women_20240913_194657.json  islam_encourages_violence_towards_women_20240913_194942.json  islam_encourages_violence_towards_women_20240914_032950.json  islam_encourages_violence_towards_women_20240914_042024.json  islam_permits_homosexuality_20240911_073454.json  islam_permits_homosexuality_20240911_073557.json  islam_permits_homosexuality_20240911_073837.json  islam_permits_homosexuality_20240911_073932.json  islam_permits_homosexuality_20240913_183626.json  islam_permits_homosexuality_20240913_183715.json  islam_permits_homosexuality_20240914_003020.json  islam_permits_homosexuality_20240914_011200.json  islam_permits_music_20240911_072918.json  islam_permits_music_20240911_073031.json  islam_permits_music_20240911_073322.json  islam_permits_music_20240911_073426.json  islam_permits_music_20240913_181809.json  (+59 more)
llm-debate/: debater.py  extract_citations.py  llm_clients.py  main.py  template.html  utils.py
(+2 files in other folders)
