[tool.poetry]
name = "islam-debate"
version = "0.1.0"
description = ""
authors = ["Marek Zaremba-Pike <marekzp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
anthropic = "^0.34.1"
openai = "^1.43.0"
spacy = "^3.7.6"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
numpy = "^2.1.1"
tabulate = "^0.9.0"
jupyter = "^1.1.1"

[tool.poetry.group.lint.dependencies]
ruff = "0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["debate"]
